--- a/static/web/css/style.css
+++ b/static/web/css/style.css
@@ -24302,6 +24302,12 @@ hr.certificate-hr {
   position: relative;
 }
 
+.tm_container_invoice {
+  max-width: 880px;
+  padding: 30px 0px;
+  position: relative;
+}
+
 .tm_text_center {
   text-align: center;
 }
