--- a/templates/web/profile.html
+++ b/templates/web/profile.html
@@ -67,7 +67,7 @@
                             </div>
                             <div class="col-lg-12 col-md-12 col-sm-3 col-3">
                                 <div class="d-flex justify-content-between align-items-center experience">
-                                    <a href="">
+                                    <a href="{% url 'web:upgrade_plan' %}">
                                         <button class="editbtn" id="chatBtn"><i class="fa-solid fa-sack-dollar"></i> Plan</button>
                                     </a>
                                 </div>
