--- a/templates/web/partials/sidebar.html
+++ b/templates/web/partials/sidebar.html
@@ -53,7 +53,7 @@
         <i class="fa-solid fa-file-invoice-dollar menu-icon"></i>
       </a>
     </li>
-    <li class="nav-item {% if is_bill %} active {% endif %}">
+    <li class="nav-item {% if is_search %} active {% endif %}">
       <a class="nav-link" href="{% url 'web:searching_invoice' %}">
         <span class="menu-title">Search Invoice</span>
         <!-- <i class="mdi mdi-format-list-bulleted menu-icon"></i> -->
