--- a/templates/web/profile.html
+++ b/templates/web/profile.html
@@ -160,13 +160,12 @@
                 </div>
             </div>
 
-            <form method="POST" enctype="multipart/form-data">
+            <form action="" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="col-lg-12">
                     <div class="row">
                         <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                             <label class="label-file">{{branding_image_form.image}} Upload Image</label>
-                            <!-- <label class="label-file"> {{branding_image}} Upload Image</label> -->
                         </div>
                         <div class="col-lg-2">
                             <input type="submit" value="Save Uploaded Image" class="save_button">
