--- a/templates/web/profile.html
+++ b/templates/web/profile.html
@@ -61,8 +61,11 @@
         position: absolute;
         width: 1px;
     }
-
+    
     @media only screen and (min-width:320px) and (max-width:567px) {
+        .expiry_date{
+        margin-left: 0px !important;
+    }
         .label-file {
         display: block;
         margin: 0 auto;
@@ -189,6 +192,13 @@
                 <div class="col-md-3">
                     <div class="p-3">
                         <div class="row">
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+                                <div class="row">
+                                    <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+                                        Expiry Date: 11/02/2023
+                                    </div>
+                                </div>
+                            </div>
                             <div class="col-lg-12 col-md-12 col-sm-3 col-3">
                                 <div class="d-flex justify-content-between align-items-center experience">
                                     <a href="{% url 'web:profile_update' %}">
