--- a/templates/web/support.html
+++ b/templates/web/support.html
@@ -61,7 +61,7 @@
 
             <div class="col-lg-3 col-md-3 col-sm-6 col-6">
                 <div class="cards">
-                    <a href="{% url 'web:profile' %}">
+                    <a href="{% url 'web:upgrade_plan_request' %}">
                         <div class="cards-content">
                             <span>CALL</span>
                         </div>
@@ -70,7 +70,7 @@
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-6">
                 <div class="cards">
-                    <a href="{% url 'web:profile' %}">
+                    <a href="{% url 'web:upgrade_plan_request' %}">
                         <div class="cards-content">
                             <span>WHATSAPP</span>
                         </div>
